--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   path: ^1.9.1
   flutter_local_notifications: ^19.5.0
   http: ^1.5.0
+  timezone: ^0.10.1
 
 dev_dependencies:
   flutter_test:
