--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_local_notifications: ^19.5.0
   http: ^1.5.0
   timezone: ^0.10.1
+  fl_chart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
