--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   http: ^1.5.0
   timezone: ^0.10.1
   fl_chart: ^1.1.1
+  firebase_core: ^3.6.0
+  firebase_auth: ^5.3.3
+  cloud_firestore: ^5.4.4
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
